tests/semantic/fail/var-2.tiger
let
	var a : int := ""
in
end
